# probation_p

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml
docs/: ADR-00X-phase-4-alert-engine.md  BE-plan-task.md  SocialIntelligencePlatform_ArchitectureDocument_v2.md  daily-report-2026-06-25-26.md  feature-analysis-and-recommendations.md  phase-4-implementation-notes.md  platform-credential-management.md  sprint-overview.md
docs/features/: 01-post-level-content-performance.md  02-competitive-benchmarking.md  03-anomaly-detection-alerts.md  04-automated-telegram-reports.md  05-hashtag-keyword-tracking.md  06-engagement-rate-best-time.md  07-sync-health-monitoring.md  08-content-calendar-view.md  09-social-listening-lite.md  10-ai-powered-insights.md  README.md
docs/research/: platform-api-phase-0.md
docs/specs/: alert-engine-fixes.md
docs/sprints/: automated-sync-plan.md  phase-0-foundation.md  phase-1-data-collector.md  phase-2-public-api-gateway.md  phase-3-plan.md  phase-3-telegram-mini-app.md  phase-4-alert-engine.md  phase-5-hardening-handover.md
docs/tracking/: auth-implementation.md  phase-3-implementation.md  phase-4-implementation.md
social-alert-engine/: .env.example  Dockerfile  README.md  pyproject.toml
social-alert-engine/migrations/: env.py
social-alert-engine/migrations/versions/: 27047c01eaa0_add_alert_logs.py
social-alert-engine/src/social_alert_engine/: __main__.py  baseline.py  celery_app.py  db.py  evaluator.py  health.py  logging_setup.py  models.py  notifier.py  settings.py  tasks.py
social-alert-engine/tests/: conftest.py  test_evaluator.py  test_placeholder.py
social-api-gateway/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
social-api-gateway/migrations/: env.py
social-api-gateway/migrations/versions/: 0001_api_keys.py  0002_add_user_role.py  da7dc61cab6e_add_telegram_users_table.py
social-api-gateway/scripts/: delete_webhook.py  export_openapi.py  setup_webhook.py  webhook_info.py
social-api-gateway/src/social_api_gateway/: __init__.py  __main__.py  config.py  db.py  deps.py  errors.py  logging_setup.py  main.py
social-api-gateway/src/social_api_gateway/admin/: __init__.py  routes.py
social-api-gateway/src/social_api_gateway/alerts/: models.py  repository.py  routes.py  schemas.py
social-api-gateway/src/social_api_gateway/auth/: __init__.py  models.py  routes.py  security.py  service.py
social-api-gateway/src/social_api_gateway/cache/: __init__.py  service.py
social-api-gateway/src/social_api_gateway/health/: routes.py
social-api-gateway/src/social_api_gateway/rate_limit/: __init__.py  service.py
social-api-gateway/src/social_api_gateway/subjects/: __init__.py  models.py  repository.py  routes.py  schemas.py
social-api-gateway/src/social_api_gateway/telegram/: bot.py  initdata.py  routes.py
social-api-gateway/tests/: conftest.py  test_health.py
social-api-gateway/tests/admin/: test_routes.py
social-api-gateway/tests/auth/: test_security.py  test_service.py
social-api-gateway/tests/cache/: test_service.py
social-api-gateway/tests/integration/: test_api.py
social-api-gateway/tests/rate_limit/: test_service.py
social-api-gateway/tests/subjects/: test_routes.py
social-api-gateway/tests/telegram/: test_initdata.py
social-common/: .env.example  README.md  pyproject.toml
social-common/social_common/: __init__.py  constants.py  enums.py  envelope.py  errors.py  schemas.py
social-common/tests/: test_contracts.py
social-data-collector/: .dockerignore  .env.example  Dockerfile  README.md  SPEC.md  pyproject.toml
social-data-collector/migrations/: env.py
social-data-collector/migrations/versions/: 0001_initial_schema.py  0002_add_videos_table.py  0003_add_platforms_and_credentials.py  0004_update_facebook_config_schema.py  511e382909c1_add_extended_data_to_subjects.py
social-data-collector/scripts/: crawl_facebook.py  crawl_youtube.py  probe_facebook.py
social-data-collector/src/social_data_collector/: __init__.py  config.py  health.py  logging_setup.py  main.py
social-data-collector/src/social_data_collector/clients/: __init__.py  base.py  facebook.py  tiktok.py  youtube.py
social-data-collector/src/social_data_collector/normalizers/: __init__.py  base.py  facebook.py  tiktok.py  youtube.py
social-data-collector/src/social_data_collector/persistence/: __init__.py  credential_resolver.py  db.py  models.py  repository.py
social-data-collector/src/social_data_collector/scheduler/: __init__.py  celery_app.py  tasks.py
social-data-collector/tests/: conftest.py  test_placeholder.py
social-data-collector/tests/clients/: test_facebook.py  test_tiktok.py  test_youtube.py
social-data-collector/tests/fixtures/: facebook_page.json  facebook_posts.json  youtube_channel.json  youtube_playlist_items.json
social-data-collector/tests/normalizers/: test_facebook.py  test_youtube.py
social-infra/: .env.example  ci-template.md
social-mini-app/: .dockerignore  .env.example  Dockerfile  README.md  STITCH-DESIGN.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
social-mini-app/src/: main.tsx  routes.tsx  styles.css
social-mini-app/src/api/: admin-client.ts  admin-types.ts  client.ts  credential-hooks.ts  (+3 more)
(+58 files in other folders)
