[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-api-gateway"
version = "0.1.0"
description = "Phase 2 public API gateway for the Social Intelligence Platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "GHN Platform Team" }]
dependencies = [
    "social-common",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "celery>=5.3",
    "cryptography>=41.0",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "fakeredis>=2.20",
    "aiosqlite>=0.19",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
social-api-gateway = "social_api_gateway.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/social_api_gateway"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "RET", "SIM"]
# B008 is ignored because FastAPI's dependency-injection idiom requires
# calling `Depends()` / `Query()` / `Header()` in argument defaults, which
# B008 flags as a function call in a default. This is the documented
# FastAPI pattern, not a bug.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true
